[package]
name = "rwrc"
description = "A reference-counted struct with read-write state, enabling sustained access control while sharing ownership"
version = "0.0.0"
edition = "2024"
authors = [
    "YdrMaster <ydrml@hotmail.com>",
    "pwhMass <a203865235@gmail.com>",
    "onenewcode <lovestudy@qq.com>",
]
repository = "https://github.com/YdrMaster/rwrc"
documentation = "https://docs.rs/rwrc"
license = "MIT"
readme = "README.md"
keywords = ["Rc", "RwLock"]
categories = ["Data structures", "Memory management"]
